2023/jun1/parser.output
Grammar

    0 $accept: NIZ_NAREDBI $end

    1 NIZ_NAREDBI: NAREDBA ';' NIZ_NAREDBI
    2            | ε

    3 NAREDBA: vektor_tip NIZ_DEKLARACIJA
    4        | E
    5        | E '.' print_token '(' ')'
    6        | id '=' E

    7 NIZ_DEKLARACIJA: DODELA ',' NIZ_DEKLARACIJA
    8                | DODELA

    9 DODELA: id
   10       | id '=' E

   11 E: E '+' E
   12  | E '-' E
   13  | '{' NIZ_BROJEVA '}'
   14  | '-' E
   15  | id
   16  | konstanta '*' E
   17  | E 'x' E
   18  | E '.' coord_token '(' id ')'
   19  | E '.' dupl_token '(' ')'

   20 NIZ_BROJEVA: NIZ_BROJEVAP
   21            | ε

   22 NIZ_BROJEVAP: NIZ_BROJEVAP ',' konstanta
   23             | konstanta


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 5 18 19
    ')' (41) 5 18 19
    '*' (42) 16
    '+' (43) 11
    ',' (44) 7 22
    '-' (45) 12 14
    '.' (46) 5 18 19
    ';' (59) 1
    '=' (61) 6 10
    'x' (120) 17
    '{' (123) 13
    '}' (125) 13
    error (256)
    vektor_tip (258) 3
    print_token (259) 5
    dupl_token (260) 19
    coord_token (261) 18
    konstanta <d> (262) 16 22 23
    id <s> (263) 6 9 10 15 18
    UNARNI_MINUS (264)


Nonterminals, with rules where they appear

    $accept (22)
        on left: 0
    NIZ_NAREDBI (23)
        on left: 1 2
        on right: 0 1
    NAREDBA (24)
        on left: 3 4 5 6
        on right: 1
    NIZ_DEKLARACIJA (25)
        on left: 7 8
        on right: 3 7
    DODELA (26)
        on left: 9 10
        on right: 7 8
    E <v> (27)
        on left: 11 12 13 14 15 16 17 18 19
        on right: 4 5 6 10 11 12 14 16 17 18 19
    NIZ_BROJEVA <v> (28)
        on left: 20 21
        on right: 13
    NIZ_BROJEVAP <v> (29)
        on left: 22 23
        on right: 20 22


State 0

    0 $accept: • NIZ_NAREDBI $end

    vektor_tip  shift, and go to state 1
    konstanta   shift, and go to state 2
    id          shift, and go to state 3
    '-'         shift, and go to state 4
    '{'         shift, and go to state 5

    $default  reduce using rule 2 (NIZ_NAREDBI)

    NIZ_NAREDBI  go to state 6
    NAREDBA      go to state 7
    E            go to state 8


State 1

    3 NAREDBA: vektor_tip • NIZ_DEKLARACIJA

    id  shift, and go to state 9

    NIZ_DEKLARACIJA  go to state 10
    DODELA           go to state 11


State 2

   16 E: konstanta • '*' E

    '*'  shift, and go to state 12


State 3

    6 NAREDBA: id • '=' E
   15 E: id •

    '='  shift, and go to state 13

    $default  reduce using rule 15 (E)


State 4

   14 E: '-' • E

    konstanta  shift, and go to state 2
    id         shift, and go to state 14
    '-'        shift, and go to state 4
    '{'        shift, and go to state 5

    E  go to state 15


State 5

   13 E: '{' • NIZ_BROJEVA '}'

    konstanta  shift, and go to state 16

    $default  reduce using rule 21 (NIZ_BROJEVA)

    NIZ_BROJEVA   go to state 17
    NIZ_BROJEVAP  go to state 18


State 6

    0 $accept: NIZ_NAREDBI • $end

    $end  shift, and go to state 19


State 7

    1 NIZ_NAREDBI: NAREDBA • ';' NIZ_NAREDBI

    ';'  shift, and go to state 20


State 8

    4 NAREDBA: E •
    5        | E • '.' print_token '(' ')'
   11 E: E • '+' E
   12  | E • '-' E
   17  | E • 'x' E
   18  | E • '.' coord_token '(' id ')'
   19  | E • '.' dupl_token '(' ')'

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    'x'  shift, and go to state 23
    '.'  shift, and go to state 24

    $default  reduce using rule 4 (NAREDBA)


State 9

    9 DODELA: id •
   10       | id • '=' E

    '='  shift, and go to state 25

    $default  reduce using rule 9 (DODELA)


State 10

    3 NAREDBA: vektor_tip NIZ_DEKLARACIJA •

    $default  reduce using rule 3 (NAREDBA)


State 11

    7 NIZ_DEKLARACIJA: DODELA • ',' NIZ_DEKLARACIJA
    8                | DODELA •

    ','  shift, and go to state 26

    $default  reduce using rule 8 (NIZ_DEKLARACIJA)


State 12

   16 E: konstanta '*' • E

    konstanta  shift, and go to state 2
    id         shift, and go to state 14
    '-'        shift, and go to state 4
    '{'        shift, and go to state 5

    E  go to state 27


State 13

    6 NAREDBA: id '=' • E

    konstanta  shift, and go to state 2
    id         shift, and go to state 14
    '-'        shift, and go to state 4
    '{'        shift, and go to state 5

    E  go to state 28


State 14

   15 E: id •

    $default  reduce using rule 15 (E)


State 15

   11 E: E • '+' E
   12  | E • '-' E
   14  | '-' E •
   17  | E • 'x' E
   18  | E • '.' coord_token '(' id ')'
   19  | E • '.' dupl_token '(' ')'

    $default  reduce using rule 14 (E)


State 16

   23 NIZ_BROJEVAP: konstanta •

    $default  reduce using rule 23 (NIZ_BROJEVAP)


State 17

   13 E: '{' NIZ_BROJEVA • '}'

    '}'  shift, and go to state 30


State 18

   20 NIZ_BROJEVA: NIZ_BROJEVAP •
   22 NIZ_BROJEVAP: NIZ_BROJEVAP • ',' konstanta

    ','  shift, and go to state 31

    $default  reduce using rule 20 (NIZ_BROJEVA)


State 19

    0 $accept: NIZ_NAREDBI $end •

    $default  accept


State 20

    1 NIZ_NAREDBI: NAREDBA ';' • NIZ_NAREDBI

    vektor_tip  shift, and go to state 1
    konstanta   shift, and go to state 2
    id          shift, and go to state 3
    '-'         shift, and go to state 4
    '{'         shift, and go to state 5

    $default  reduce using rule 2 (NIZ_NAREDBI)

    NIZ_NAREDBI  go to state 32
    NAREDBA      go to state 7
    E            go to state 8


State 21

   11 E: E '+' • E

    konstanta  shift, and go to state 2
    id         shift, and go to state 14
    '-'        shift, and go to state 4
    '{'        shift, and go to state 5

    E  go to state 33


State 22

   12 E: E '-' • E

    konstanta  shift, and go to state 2
    id         shift, and go to state 14
    '-'        shift, and go to state 4
    '{'        shift, and go to state 5

    E  go to state 34


State 23

   17 E: E 'x' • E

    konstanta  shift, and go to state 2
    id         shift, and go to state 14
    '-'        shift, and go to state 4
    '{'        shift, and go to state 5

    E  go to state 35


State 24

    5 NAREDBA: E '.' • print_token '(' ')'
   18 E: E '.' • coord_token '(' id ')'
   19  | E '.' • dupl_token '(' ')'

    print_token  shift, and go to state 36
    dupl_token   shift, and go to state 37
    coord_token  shift, and go to state 38


State 25

   10 DODELA: id '=' • E

    konstanta  shift, and go to state 2
    id         shift, and go to state 14
    '-'        shift, and go to state 4
    '{'        shift, and go to state 5

    E  go to state 39


State 26

    7 NIZ_DEKLARACIJA: DODELA ',' • NIZ_DEKLARACIJA

    id  shift, and go to state 9

    NIZ_DEKLARACIJA  go to state 40
    DODELA           go to state 11


State 27

   11 E: E • '+' E
   12  | E • '-' E
   16  | konstanta '*' E •
   17  | E • 'x' E
   18  | E • '.' coord_token '(' id ')'
   19  | E • '.' dupl_token '(' ')'

    'x'  shift, and go to state 23
    '.'  shift, and go to state 29

    $default  reduce using rule 16 (E)


State 28

    6 NAREDBA: id '=' E •
   11 E: E • '+' E
   12  | E • '-' E
   17  | E • 'x' E
   18  | E • '.' coord_token '(' id ')'
   19  | E • '.' dupl_token '(' ')'

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    'x'  shift, and go to state 23
    '.'  shift, and go to state 29

    $default  reduce using rule 6 (NAREDBA)


State 29

   18 E: E '.' • coord_token '(' id ')'
   19  | E '.' • dupl_token '(' ')'

    dupl_token   shift, and go to state 37
    coord_token  shift, and go to state 38


State 30

   13 E: '{' NIZ_BROJEVA '}' •

    $default  reduce using rule 13 (E)


State 31

   22 NIZ_BROJEVAP: NIZ_BROJEVAP ',' • konstanta

    konstanta  shift, and go to state 41


State 32

    1 NIZ_NAREDBI: NAREDBA ';' NIZ_NAREDBI •

    $default  reduce using rule 1 (NIZ_NAREDBI)


State 33

   11 E: E • '+' E
   11  | E '+' E •
   12  | E • '-' E
   17  | E • 'x' E
   18  | E • '.' coord_token '(' id ')'
   19  | E • '.' dupl_token '(' ')'

    'x'  shift, and go to state 23
    '.'  shift, and go to state 29

    $default  reduce using rule 11 (E)


State 34

   11 E: E • '+' E
   12  | E • '-' E
   12  | E '-' E •
   17  | E • 'x' E
   18  | E • '.' coord_token '(' id ')'
   19  | E • '.' dupl_token '(' ')'

    'x'  shift, and go to state 23
    '.'  shift, and go to state 29

    $default  reduce using rule 12 (E)


State 35

   11 E: E • '+' E
   12  | E • '-' E
   17  | E • 'x' E
   17  | E 'x' E •
   18  | E • '.' coord_token '(' id ')'
   19  | E • '.' dupl_token '(' ')'

    'x'  shift, and go to state 23
    '.'  shift, and go to state 29

    $default  reduce using rule 17 (E)


State 36

    5 NAREDBA: E '.' print_token • '(' ')'

    '('  shift, and go to state 42


State 37

   19 E: E '.' dupl_token • '(' ')'

    '('  shift, and go to state 43


State 38

   18 E: E '.' coord_token • '(' id ')'

    '('  shift, and go to state 44


State 39

   10 DODELA: id '=' E •
   11 E: E • '+' E
   12  | E • '-' E
   17  | E • 'x' E
   18  | E • '.' coord_token '(' id ')'
   19  | E • '.' dupl_token '(' ')'

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    'x'  shift, and go to state 23
    '.'  shift, and go to state 29

    $default  reduce using rule 10 (DODELA)


State 40

    7 NIZ_DEKLARACIJA: DODELA ',' NIZ_DEKLARACIJA •

    $default  reduce using rule 7 (NIZ_DEKLARACIJA)


State 41

   22 NIZ_BROJEVAP: NIZ_BROJEVAP ',' konstanta •

    $default  reduce using rule 22 (NIZ_BROJEVAP)


State 42

    5 NAREDBA: E '.' print_token '(' • ')'

    ')'  shift, and go to state 45


State 43

   19 E: E '.' dupl_token '(' • ')'

    ')'  shift, and go to state 46


State 44

   18 E: E '.' coord_token '(' • id ')'

    id  shift, and go to state 47


State 45

    5 NAREDBA: E '.' print_token '(' ')' •

    $default  reduce using rule 5 (NAREDBA)


State 46

   19 E: E '.' dupl_token '(' ')' •

    $default  reduce using rule 19 (E)


State 47

   18 E: E '.' coord_token '(' id • ')'

    ')'  shift, and go to state 48


State 48

   18 E: E '.' coord_token '(' id ')' •

    $default  reduce using rule 18 (E)
